2009-08-05  Tobias Burnus  <burnus@net-b.de>

PR fortran/40969
        Revert:
        2009-08-04  Tobias Burnus  <burnus@net-b.de>

        PR fortran/40949
        * trans-types.c (gfc_get_function_type): Fix typelist of
        functions without argument.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@150500 138bc75d-0d04-0410-961f-82ee72b054a4